# prometheus_otel

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yml
k8s/: manifests.yaml
src/: main.rs
