[package]
name = "prom_otel"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.3",  default-features = false}
tokio = { version = "1.0", features = ["full"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto", "metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_metrics_custom_reader", "metrics", "rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"
hyper-util = { version = "0.1.16", features = ["full", "service"] }
once_cell = "1.21.3"
http-body-util = { version = "0.1.3", features = ["full"] }
prometheus = "0.14.0"
opentelemetry-appender-tracing = "0.30.1"
actix-web = "4"
sysinfo = "0.36.1"
